refactor(tenant): extract common and core modules